# skbuild_test

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  HISTORY.md  LICENSE  MANIFEST.in  README.md  makefile  myReadMe.md  noxfile.py  pyproject.toml  requirements.txt  setup.py
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  wheels.yml
cmake/: FindGLFW3.cmake
docs/: conf.py  core_module.rst  history.md  index.md
docs/_generate/: skbuild_only._core.add.rst  skbuild_only._core.subtract.rst  skbuild_only._core.test_glfw.rst
src/cpp/: my_lib.cpp  my_lib.h
src/pybind/: main.cpp
src/skbuild_only/: __init__.py  _core.pyi  moduleA.py
tests/: test_compiled.py  test_moduleA.py  test_package.py
